# rslog

./: .gitignore  Cargo.toml  README.md
docs/: 3-API_GUIDE.md  STRUCTURE.md  index.md  main.js  style.css
docs/.vitepress/: config.mts
docs/zh-CN/: 2-README.md  API_GUIDE.md  INDEX.md  index.html
examples/: color_test.rs  test.rs
scripts/: update_docs.ps1  update_docs.sh
src/: color.rs  config.rs  filter.rs  formatter.rs  level.rs  lib.rs  logger.rs  macros.rs  rotator.rs  writer.rs
zh-CN/: INDEX.md  README.md
