[package]
name = "rslog"
version = "0.1.3"
edition = "2021"
description = "A lightweight logging library for Rust built entirely using the standard library with zero external dependencies."
license = "MIT"
readme = "README.md"
repository = "https://github.com/Cnkrru/rslog"
documentation = "https://docs.rs/rslog"
keywords = ["logging", "log", "logger", "simple", "zero-dependency"]
categories = ["development-tools::debugging"]
authors = ["Cnkrru <J19323850@gmail.com>"]

# Documentation configuration
[package.metadata.docs.rs]
# Features to enable when building documentation
all-features = true
# Rustdoc flags
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]

# Compile-time log level filtering
# Enable only the features for levels you want to keep.
# By default all levels are enabled.
# Each feature includes itself and all higher levels.
# Example: `--features max_level_warn` keeps WARN, ERROR, CRITICAL.
[features]
default = ["max_level_trace"]
max_level_trace = []   # all levels enabled (default)
max_level_debug = []   # trace! is stripped at compile time
max_level_info = []    # trace!, debug! are stripped
max_level_warn = []    # trace!, debug!, info! are stripped
max_level_error = []   # trace!, debug!, info!, warn! are stripped
max_level_critical = []# only critical! remains
max_level_off = []     # all macros stripped
